build : creates conda requirements file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+absl-py @ file:///C:/b/abs_14wchyjaia/croot/absl-py_1714140489450/work
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.14
 aiosignal==1.4.0
@@ -16,7 +17,7 @@ bleach @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ble
 Bottleneck @ file:///D:/bld/bottleneck_1747241438387/work
 Brotli @ file:///C:/b/abs_c415aux9ra/croot/brotli-split_1736182803933/work
 cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1752493286596/work/certifi
+certifi @ file:///C:/b/abs_67mh6i36ci/croot/certifi_1752653721535/work/certifi
 cffi @ file:///C:/b/abs_29_b57if3f/croot/cffi_1736184144340/work
 charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1746214863626/work
 colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
@@ -35,6 +36,7 @@ fonttools @ file:///D:/bld/fonttools_1752722680702/work
 fqdn @ file:///home/conda/feedstock_root/build_artifacts/fqdn_1733327382592/work/dist
 frozenlist==1.7.0
 fsspec==2024.6.1
+grpcio @ file:///D:/bld/grpc-split_1753444192867/work
 h11 @ file:///home/conda/feedstock_root/build_artifacts/h11_1745526374115/work
 h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1738578511449/work
 hpack @ file:///home/conda/feedstock_root/build_artifacts/hpack_1737618293087/work
@@ -74,6 +76,7 @@ librosa @ file:///home/conda/feedstock_root/build_artifacts/librosa_174179756678
 lightning==2.5.2
 lightning-utilities==0.14.3
 llvmlite==0.44.0
+Markdown @ file:///C:/b/abs_f9hbi7znfr/croot/markdown_1746114643651/work
 MarkupSafe==2.1.5
 matplotlib==3.10.3
 matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
@@ -107,6 +110,7 @@ pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1733421311631/wo
 prometheus_client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1748896729786/work
 prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1744724089886/work
 propcache==0.3.2
+protobuf @ file:///D:/bld/protobuf_1751668310022/work/bazel-bin/python/dist/protobuf-6.31.1-cp312-abi3-win_amd64.whl#sha256=308f4000bc359b34683228f57f28821995b8a8b95b484bb95377b43d0daab9b6
 psutil @ file:///C:/b/abs_b5gv3mn55h/croot/psutil_1736371546320/work
 pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
 pycparser @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pycparser_1733195786/work
@@ -146,6 +150,8 @@ standard-sunau @ file:///D:/bld/standard-sunau_1751925335429/work
 statsmodels @ file:///D:/bld/statsmodels_1751917457785/work
 sympy==1.13.3
 tangled_up_in_unicode @ file:///home/conda/feedstock_root/build_artifacts/tangled-up-in-unicode_1745226565857/work
+tensorboard @ file:///C:/b/abs_5bilmf0w_k/croot/tensorboard_1742506715644/work/tensorboard-2.19.0-py3-none-any.whl#sha256=5e71b98663a641a7ce8a6e70b0be8e1a4c0c45d48760b076383ac4755c35b9a0
+tensorboard_data_server @ file:///C:/b/abs_96oxnengxy/croot/tensorboard-data-server_1724172563443/work/tensorboard_data_server-0.7.0-py3-none-any.whl#sha256=0d8e38f3cc912719d7e458526106e6d9b2f0a1216a702f53d3f8da5db3cd1f56
 terminado @ file:///D:/bld/terminado_1710262761616/work
 threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1741878222898/work
 tinycss2 @ file:///home/conda/feedstock_root/build_artifacts/tinycss2_1729802851396/work
@@ -153,6 +159,7 @@ tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1733256695513/wo
 torch==2.7.1+cu128
 torchaudio==2.7.1+cu128
 torchmetrics==1.7.4
+torchsummary==1.5.1
 torchvision==0.22.1+cu128
 tornado @ file:///C:/b/abs_7dzpc171lf/croot/tornado_1748956950306/work
 tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1735661334605/work
@@ -170,6 +177,7 @@ wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_173323132628
 webcolors @ file:///home/conda/feedstock_root/build_artifacts/webcolors_1733359735138/work
 webencodings @ file:///home/conda/feedstock_root/build_artifacts/webencodings_1733236011802/work
 websocket-client @ file:///home/conda/feedstock_root/build_artifacts/websocket-client_1733157342724/work
+Werkzeug @ file:///C:/b/abs_c7bupijx2_/croot/werkzeug_1737448709012/work
 wheel==0.45.1
 widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1744291053367/work
 win_inet_pton @ file:///D:/bld/win_inet_pton_1733130564612/work
